# crypto-assist

./: .gitignore  AGENTS.md  CLAUDE.md  MIGRATION_PLAN.md  PLAN.md  PLANO_BACKEND.md  crypto_portfolio.html  index.html
backend/: .env.example  .gitignore  AGENTS.md  README.md  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  sst.config.ts  tsconfig.json  vitest.setup.ts
backend/app/: cognito.py  config.py  dependencies.py  main.py  models.py  platform_resolve.py  price_provider.py  wallet_fifo.py
backend/app/db/: postgres_client.py  supabase_client.py
backend/app/providers/: coingecko.py  cryptocompare.py
backend/app/routes/: coins.py  exchange_rates.py  exit_prices.py  export_data.py  import_data.py  op_closures.py  ops.py  platforms.py  price_history.py  prices.py
backend/db/: schema.sql
backend/db/migrations/: 004_op_type_english.sql  005_usd_prices_and_currency.sql  006_price_history.sql  007_price_symbol.sql  008_platform_fields.sql  009_coin_search_cache.sql  010_curated_platform_logos.sql  013_trade_group_id.sql  (+5 more)
backend/scripts/: backfill_platform_fields.py
backend/src/: app.ts  index.ts  types.ts
backend/tests/: conftest.py  test_backfill_platform_fields.py  test_coins.py  test_config.py  test_cors.py  test_exchange_rates.py  test_exit_prices.py  test_export.py  test_health.py  test_import.py  test_isolation.py  test_migrations.py  test_op_closures.py  test_ops.py  test_platform_resolve.py  test_platforms.py  test_postgres_client.py  test_price_history.py  test_price_provider.py  test_prices.py
(+457 files in other folders)
