[project]
name = "crypto-assist-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115,<1.0",
    "mangum>=0.19,<1.0",
    "psycopg[binary]>=3.2,<4.0",
    "boto3>=1.35,<2.0",
    "httpx>=0.28,<1.0",
    "pydantic>=2.10,<3.0",
    "pydantic-settings>=2.7,<3.0",
    "PyJWT>=2.10,<3.0",
    "cryptography>=42.0,<44.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0,<9.0",
    "pytest-anyio>=0.0.0",
    "httpx>=0.28,<1.0",
    "pytest-cov>=7.1.0",
]

[tool.pytest.ini_options]
markers = ["pgdata: mark test with DB stub data"]
